@@ -49,7 +49,7 @@
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
 
-        <revision>2.18.0-SNAPSHOT</revision>
+        <revision>2.19.0-SNAPSHOT</revision>
         <!-- Ignite version will be substituted with the flatten-maven-plugin and used as
             a version dependency for Ignite extensions. -->
         <ignite.version>${revision}</ignite.version>
@@ -68,7 +68,6 @@
         <!-- Dependency versions -->
         <commons.codec.version>1.20.0</commons.codec.version>
         <commons.collections.version>3.2.2</commons.collections.version>
-        <commons.lang.version>2.6</commons.lang.version>
         <commons.io.version>2.21.0</commons.io.version>
         <commons.dbcp.version>1.4</commons.dbcp.version>
         <cron4j.version>2.2.5</cron4j.version>
@@ -78,21 +77,22 @@
         <grpc-context.version>1.62.2</grpc-context.version>
         <h2.version>1.4.197</h2.version>
         <hamcrest.version>2.2</hamcrest.version>
-        <jackson.version>2.19.0</jackson.version>
+        <jackson.version>2.21.1</jackson.version>
+        <jackson-annotations.version>2.21</jackson-annotations.version>
         <javassist.version>3.28.0-GA</javassist.version>
         <javax.cache.bundle.version>1.0.0_1</javax.cache.bundle.version>
         <javax.cache.tck.version>1.1.0</javax.cache.tck.version>
         <javax.cache.version>1.0.0</javax.cache.version>
         <jboss.rmi.version>1.0.6.Final</jboss.rmi.version>
         <jetbrains.annotations.version>16.0.3</jetbrains.annotations.version>
-        <jetty.version>11.0.24</jetty.version>
+        <jetty.version>11.0.25</jetty.version>
         <jetty-jakarta-servlet-api.version>5.0.2</jetty-jakarta-servlet-api.version>
         <jmh.version>1.37</jmh.version>
         <jna.version>4.5.2</jna.version>
         <jnr.posix.version>3.1.15</jnr.posix.version>
         <jotm.version>2.3.1-M1</jotm.version>
         <jtidy.version>1.0.5</jtidy.version>
-        <log4j2.version>2.25.3</log4j2.version>
+        <log4j2.version>2.25.4</log4j2.version>
         <lucene.bundle.version>7.4.0_1</lucene.bundle.version>
         <lucene.version>8.11.2</lucene.version>
         <lz4.version>1.10.1</lz4.version>
@@ -109,17 +109,19 @@
         <snappy.version>1.1.10.7</snappy.version>
         <spring.version>5.3.39</spring.version>
         <surefire.version>3.1.2</surefire.version>
-        <tomcat.version>9.0.63</tomcat.version>
+        <tomcat.version>10.0.27</tomcat.version>
         <yardstick.version>0.8.3</yardstick.version>
-        <zookeeper.version>3.9.4</zookeeper.version>
+        <zookeeper.version>3.9.5</zookeeper.version>
         <zstd.version>1.5.5-5</zstd.version>
         <opencensus.version>0.31.1</opencensus.version>
-        <commons.lang3.version>3.18.0</commons.lang3.version>
+        <commons.lang3.version>3.20.0</commons.lang3.version>
         <ignite-kafka-ext.version>1.0.0</ignite-kafka-ext.version>
         <xstream.version>1.4.17</xstream.version>
 
         <!-- Maven plugins versions -->
-        <maven.javadoc.plugin.version>3.2.0</maven.javadoc.plugin.version>
+        <maven.javadoc.plugin.version>3.6.3</maven.javadoc.plugin.version>
+        <maven.enforcer.plugin.version>3.6.2</maven.enforcer.plugin.version>
+
         <sonar.organization>apache</sonar.organization>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
         <sonar.exclusions>**/generated/**/*</sonar.exclusions>
@@ -239,6 +241,7 @@
                         <!-- This configuration checkstyle files will be obtained from the 'ignite-checkstyle' resources. -->
                         <configLocation>checkstyle/checkstyle.xml</configLocation>
                         <suppressionsLocation>checkstyle/checkstyle-suppressions.xml</suppressionsLocation>
+                        <suppressionsFileExpression>checkstyle.suppressions.file</suppressionsFileExpression>
                         <includeTestSourceDirectory>true</includeTestSourceDirectory>
                         <excludes>**/generated/**/*</excludes>
                     </configuration>
@@ -621,11 +624,11 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-enforcer-plugin</artifactId>
-                <version>3.0.0-M2</version>
+                <version>${maven.enforcer.plugin.version}</version>
                 <configuration>
                     <rules>
                         <requireMavenVersion>
-                            <version>[3.5.0,)</version>
+                            <version>[3.9.6,)</version>
                         </requireMavenVersion>
                     </rules>
                 </configuration>
@@ -700,6 +703,7 @@
                             <name>ignite.buildNumber</name>
                             <!-- See: https://docs.oracle.com/en/java/javase/11/docs/api/java.base/java/text/SimpleDateFormat.html -->
                             <pattern>yywwu</pattern>
+                            <locale>en_US</locale>
                         </configuration>
                     </execution>
                 </executions>
@@ -756,7 +760,7 @@
                         <configuration>
                             <config>${maven.multiModuleProjectDirectory}/parent/rat-config.xml</config>
                             <!-- Disable SCM ignore file parsing to avoid RAT 0.17 race condition
-                                 with temporary NameSet files in parallel builds (CREADUR-RAT-311) -->
+                                 with temporary NameSet files in parallel builds -->
                             <parseSCMIgnoresAsExcludes>false</parseSCMIgnoresAsExcludes>
                         </configuration>
                         <executions>
@@ -812,6 +816,7 @@
                                         <inputExclude>**/MIGRATION_GUIDE*</inputExclude>
                                         <inputExclude>src/main/java/org/apache/ignite/internal/util/nio/SelectedSelectionKeySet.java</inputExclude><!-- Apache 2.0 license -->
                                         <inputExclude>src/main/java/org/apache/ignite/internal/processors/query/calcite/sql/generated/*.java</inputExclude><!--auto generated files-->
+                                        <inputExclude>src/main/java/org/apache/ignite/internal/processors/query/stat/hll/**</inputExclude><!-- Apache 2.0 license, copyright Aggregate Knowledge, Inc. -->
                                         <inputExclude>src/main/java/org/jsr166/*.java</inputExclude>
                                         <inputExclude>src/main/java/org/mindrot/*.java</inputExclude>
                                         <inputExclude>src/test/java/org/apache/ignite/p2p/p2p.properties</inputExclude><!--test depends on file content-->
@@ -1079,6 +1084,7 @@
                                 --add-opens=java.base/java.time=ALL-UNNAMED
                                 --add-opens=java.base/java.text=ALL-UNNAMED
                                 --add-opens=java.base/java.security=ALL-UNNAMED
+                                --add-opens=java.logging/java.util.logging=ALL-UNNAMED
                                 --add-opens=java.management/sun.management=ALL-UNNAMED
                                 --add-opens java.desktop/java.awt.font=ALL-UNNAMED
                                 --add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
